# Group_21_F_GNR

./: .gitattributes  README.md
GNR638_A1/: README.md  build_cpp.sh  requirements.txt  train.py  train_model.py
GNR638_A1/cpp/: CMakeLists.txt  conv_ops.cpp
GNR638_A1/framework/: __init__.py  tensor.py
GNR638_A1/framework/nn/: __init__.py  activations.py  fast_layers.py  layers.py  loss.py  module.py
GNR638_A1/framework/optim/: __init__.py  optimizer.py
GNR638_A1/framework/utils/: __init__.py  data.py  parallel_data.py
GNR638_A2/: A2_notebook.ipynb  README.md
GNR638_A2/output/: convnext_tiny_fewshot_100pct_best.pth  convnext_tiny_fewshot_20pct_best.pth  convnext_tiny_fewshot_5pct_best.pth  convnext_tiny_full_ft_best.pth  convnext_tiny_last_block_best.pth  convnext_tiny_linear_probe_best.pth  convnext_tiny_selective_20_best.pth  efficientnet_b0_fewshot_100pct_best.pth  efficientnet_b0_fewshot_20pct_best.pth  efficientnet_b0_fewshot_5pct_best.pth  efficientnet_b0_full_ft_best.pth  efficientnet_b0_last_block_best.pth  efficientnet_b0_linear_probe_best.pth  efficientnet_b0_selective_20_best.pth  resnet50_fewshot_100pct_best.pth  resnet50_fewshot_20pct_best.pth  resnet50_fewshot_5pct_best.pth  resnet50_full_ft_best.pth  resnet50_last_block_best.pth  resnet50_linear_probe_best.pth  resnet50_selective_20_best.pth
GNR_A2/: Readme.md
GNR_Project1/: README.md  answering.py  inference.py  ocr_index.py  requirements.txt  setup.bash  stitch.py
